provide role for project for current user when reading project summaries
